...
    public var body: some View {
        TabView(selection: $store.selectedTab.sending(\.tabSelected)) {
            StudyNavigationView(
                store: store.scope(state: \.study, action: \.study)
            )
            .tabItem {
                Label("스터디", systemImage: "rectangle.3.group.bubble.left")
            }
            .tag(TabFeature.State.Tab.study)

            RecruitListView(
                store: store.scope(state: \.recruit, action: \.recruit)
            )
...
            .tag(TabFeature.State.Tab.recruit)

            FeedbackManagementView(
                store: store.scope(state: \.feedbackManagement, action: \.feedbackManagement)
            )
            .tabItem {
                Label("피드백", systemImage: "bubble.left.and.bubble.right")
            }
            .tag(TabFeature.State.Tab.feedback)

            SettingsView(
                store: store.scope(state: \.settings, action: \.settings)
            )
...
